--- a/gcc/doc/contrib.texi
+++ b/gcc/doc/contrib.texi
@@ -105,6 +105,9 @@ John Carr for his alias work, SPARC hacking, infrastructure improvements,
 previous contributions to the steering committee, loop optimizations, etc.
 
 @item
+Stephane Carrez for 68HC11 and 68HC12 ports.
+
+@item
 Steve Chamberlain for support for the Hitachi SH and H8 processors
 and the PicoJava processor, and for GCJ config fixes.
 
@@ -305,8 +308,8 @@ as lots of bug fixes and test cases, and for improving the Java build
 system.
 
 @item
-Janis Johnson for ia64 testing and fixes and for her quality improvement
-sidetracks.
+Janis Johnson for ia64 testing and fixes, her quality improvement
+sidetracks, and web page maintainance.
 
 @item
 J. Kean Johnston for OpenServer support.
