2003-03-17  Zack Weinberg  <zack@codesourcery.com>
	* objc.dg/naming-1.m: Use "(parse|syntax) error".
	* objc.dg/naming-2.m: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@64994 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-17  Zack Weinberg  <zack@codesourcery.com>
+
+	* objc.dg/naming-1.m: Use "(parse|syntax) error".
+	* objc.dg/naming-2.m: Likewise.
+
 2003-01-31  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* gcc.dg/20030129-1.c: New test.
